k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devinedesk-web-svc
  labels:
    app: devinedesk
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: devinedesk
    tier: frontend
