k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devinedesk-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - app.devinedesk.com
      secretName: devinedesk-tls
  rules:
    - host: app.devinedesk.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devinedesk-web-svc
                port:
                  number: 80
